[project]
name = "win-unlock"
version = "0.1.0"
description = "A tool to unlock Windows lockscreen without user interaction"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.13"
dependencies = [
    "aardwolf>=0.2.13",
    "psutil>=7.2.2",
]

[dependency-groups]
build = [
    "pyinstaller>=6.19.0",
]
